feat: final adjusts

--- a/main.html
+++ b/main.html
@@ -16,12 +16,15 @@
       "
     >
       <header style="padding: 5vh 10vw" class="flex space-between align-center">
-        <img src="./assets/logo.png" alt="Logo" />
+        <img loading="lazy" src="./assets/logo.png" alt="Logo" />
         <div>
           <nav style="gap: 4px" class="flex align-center">
-            <a href="#home"><img src="./assets/whatsapp.png" /></a>
-            <a href="#home"><img src="./assets/instagram.png" /></a>
-            <a href="#home"><img src="./assets/linkedin.png" /></a>
+            <a href="https://wa.me/5521986871976"
+              ><img loading="lazy" src="./assets/whatsapp.png"
+            /></a>
+            <a href="https://www.linkedin.com/company/gomes-alves-consultoria"
+              ><img loading="lazy" src="./assets/linkedin.png"
+            /></a>
           </nav>
         </div>
       </header>
@@ -38,21 +41,21 @@
             style="gap: 10px; margin-top: 40px"
             class="main-section-subtitle white-font roboto-slab align-center flex"
           >
-            <img src="./assets/check-icon.png" alt="Check" />
+            <img loading="lazy" src="./assets/check-icon.png" alt="Check" />
             Total controle de processos
           </div>
           <div
             style="gap: 10px; margin-top: 24px"
             class="main-section-subtitle white-font roboto-slab align-center flex"
           >
-            <img src="./assets/clock-icon.png" alt="Check" />
+            <img loading="lazy" src="./assets/clock-icon.png" alt="Check" />
             Resultados otimizados
           </div>
           <div
             style="gap: 10px; margin-top: 24px; margin-bottom: 40px"
             class="main-section-subtitle white-font roboto-slab align-center flex"
           >
-            <img src="./assets/dash-icon.png" alt="Check" />
+            <img loading="lazy" src="./assets/dash-icon.png" alt="Check" />
             Custos e riscos reduzidos
           </div>
         </div>
@@ -132,10 +135,16 @@
             Alves. Escolha a expertise que simplifica, otimiza e impulsiona o
             sucesso de sua empresa.
           </p>
-          <button class="main-button">Fale Conosco</button>
+          <a href="https://wa.me/5521986871976">
+            <button class="main-button">Fale Conosco</button>
+          </a>
         </div>
         <div>
-          <img style="max-width: 100vw" src="./assets/about-us-image.png" />
+          <img
+            loading="lazy"
+            style="max-width: 100vw"
+            src="./assets/about-us-image.png"
+          />
         </div>
       </div>
     </section>
@@ -146,7 +155,7 @@
         class="flex align-start space-evenly wrap"
       >
         <div style="max-width: 280px">
-          <img src="./assets/gear-icon.png" />
+          <img loading="lazy" src="./assets/gear-icon.png" />
           <h2 class="roboto-slab">Organizar processos e rotinas</h2>
           <p>
             Entender como funcionam as áreas administrativas e financeiras de
@@ -155,7 +164,7 @@
           </p>
         </div>
         <div style="max-width: 280px">
-          <img src="./assets/search-icon.png" />
+          <img loading="lazy" src="./assets/search-icon.png" />
           <h2 class="roboto-slab">Analisar e mapear melhorias</h2>
           <p>
             Realizar um trabalho ativo e contínuo de identificação de obstáculos
@@ -163,7 +172,7 @@
           </p>
         </div>
         <div style="max-width: 280px">
-          <img src="./assets/chart-icon.png" />
+          <img loading="lazy" src="./assets/chart-icon.png" />
           <h2 class="roboto-slab">Acompanhamento e otimização</h2>
           <p>
             Avaliar resultados, opiniões de sócios e colaboradores e permanecer
@@ -177,6 +186,7 @@
       <div style="gap: 40px" class="flex column justify-center align-center">
         <div class="flex row align-center servicos-container wrap">
           <img
+            loading="lazy"
             style="width: 400px; max-width: 80vw"
             src="./assets/working-on-screen.png"
           />
@@ -186,11 +196,18 @@
               Apoiamos e otimizamos seus processos internos com uma consultoria
               experiente e especializada em gerar resultados.
             </p>
-            <button class="whatsapp-button">Whatsapp</button>
+            <a class="flex align-center" href="https://wa.me/5521986871976">
+              <img
+                style="position: relative; right: -42px"
+                src="./assets/whatsapp-icon.png"
+              />
+              <button class="whatsapp-button">Whatsapp</button>
+            </a>
           </div>
         </div>
         <div class="flex row align-center servicos-container wrap">
           <img
+            loading="lazy"
             style="width: 400px; max-width: 80vw"
             src="./assets/diagrams-at-computer.png"
           />
@@ -201,13 +218,22 @@
               financeira. Tudo bem resolvido por terceiros, com qualidade e
               profissionalismo.
             </p>
-            <button class="whatsapp-button">Whatsapp</button>
+            <a class="flex align-center" href="https://wa.me/5521986871976">
+              <img
+                style="position: relative; right: -42px"
+                src="./assets/whatsapp-icon.png"
+              />
+              <button class="whatsapp-button">Whatsapp</button>
+            </a>
           </div>
         </div>
       </div>
     </section>
     <section
-      style="background-image: url(./assets/justice-image.png)"
+      style="
+        background-image: url(./assets/justice-image.png);
+        background-size: cover;
+      "
       class="contact-form"
     >
       <h2>Peça um orçamento , tire uma dúvida ou agende uma reunião.</h2>
@@ -269,17 +295,22 @@
     </section>
     <footer>
       <div class="flex align-center column">
-        <img style="padding: 40px 0" src="./assets/logo.png" alt="Logo" />
+        <img
+          loading="lazy"
+          style="padding: 40px 0"
+          src="./assets/logo.png"
+          alt="Logo"
+        />
         <div class="footer-icon-text">
-          <img src="./assets/tel-icon.png" />
+          <img loading="lazy" src="./assets/tel-icon.png" />
           <p>(21) 98687-1976</p>
         </div>
         <div class="footer-icon-text">
-          <img src="./assets/email-icon.png" />
+          <img loading="lazy" src="./assets/email-icon.png" />
           <p>contato@gomesealvesservicos.com.br</p>
         </div>
         <div class="footer-icon-text">
-          <img src="./assets/map-icon.png" />
+          <img loading="lazy" src="./assets/map-icon.png" />
           <p>Rua Gonzaga Bastos, 397, Vila Isabel Rio de Janeiro - RJ</p>
         </div>
         <hr style="max-width: 80vw; width: 600px; margin: 10px 0" />
