--- a/main.html
+++ b/main.html
@@ -2,7 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, , maximum-scale=1"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Gomes e Alves Advocacia</title>
   </head>
@@ -184,7 +187,9 @@
     <section class="nossos-servicos">
       <h5 style="margin-bottom: 40px">Nossos serviços</h5>
       <div style="gap: 40px" class="flex column justify-center align-center">
-        <div class="flex row align-center servicos-container wrap">
+        <div
+          class="flex row align-center justify-center servicos-container wrap"
+        >
           <img
             loading="lazy"
             style="width: 400px; max-width: 80vw"
@@ -196,16 +201,20 @@
               Apoiamos e otimizamos seus processos internos com uma consultoria
               experiente e especializada em gerar resultados.
             </p>
-            <a class="flex align-center" href="https://wa.me/5521986871976">
-              <img
-                style="position: relative; right: -42px"
-                src="./assets/whatsapp-icon.png"
-              />
-              <button class="whatsapp-button">Whatsapp</button>
-            </a>
+            <div class="flex align-center justify-center">
+              <a class="flex align-center" href="https://wa.me/5521986871976">
+                <img
+                  style="position: relative; right: -42px"
+                  src="./assets/whatsapp-icon.png"
+                />
+                <button class="whatsapp-button">Whatsapp</button>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="flex row align-center servicos-container wrap">
+        <div
+          class="flex row align-center justify-center servicos-container wrap"
+        >
           <img
             loading="lazy"
             style="width: 400px; max-width: 80vw"
@@ -218,13 +227,15 @@
               financeira. Tudo bem resolvido por terceiros, com qualidade e
               profissionalismo.
             </p>
-            <a class="flex align-center" href="https://wa.me/5521986871976">
-              <img
-                style="position: relative; right: -42px"
-                src="./assets/whatsapp-icon.png"
-              />
-              <button class="whatsapp-button">Whatsapp</button>
-            </a>
+            <div class="flex align-center justify-center">
+              <a class="flex align-center" href="https://wa.me/5521986871976">
+                <img
+                  style="position: relative; right: -42px"
+                  src="./assets/whatsapp-icon.png"
+                />
+                <button class="whatsapp-button">Whatsapp</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
