--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
       content="width=device-width, initial-scale=1.0, , maximum-scale=1"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Gomes e Alves Advocacia</title>
+
+    <title>Gomes & Alves Serviços</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
   </head>
 
   <body>
@@ -37,8 +39,10 @@
       >
         <div style="max-width: 550px" class="flex align-start column">
           <h1 class="roboto-slab white-font main-section-title">
-            Simplifique o ambiente interno da sua empresa, dedicando seu tempo
-            para a essência do negócio.
+            <b
+              >Simplifique o ambiente interno da sua empresa, dedicando seu
+              tempo para a essência do negócio.</b
+            >
           </h1>
           <div
             style="gap: 10px; margin-top: 40px"
